Add couple of multi-agyw slides

--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -42,8 +42,15 @@ knitr::include_graphics("../figures/beyond-borders/geometries.png")
 
 #
 
-```{r intercept-comparison, echo=FALSE, out.width="70%", fig.align = 'center'}
-knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
+```{r global-aids-strategy, echo=FALSE, out.width="40%", fig.align = 'center'}
+knitr::include_graphics("global-aids-strategy.png")
+```
+
+#
+
+```{r available-surveys, echo=FALSE, out.width="90%"}
+resource_version <- "20231120-121631-164346ab"
+knitr::include_graphics(paste0("../resources/multi-agyw/", resource_version, "/depends/available-surveys.png"))
 ```
 
 #
